--- a/src/pages/Detalhes/detalhes.css
+++ b/src/pages/Detalhes/detalhes.css
@@ -16,7 +16,7 @@
     width: 100%
 }
 
-.detalhes img{
+.images img{
     width: 100%;
     align-self: center
 }
@@ -72,7 +72,7 @@
 }
 
 .casting-area{
-    width: 160px;
+    width: 200px;
 }
 
 .casting-window{
@@ -93,7 +93,7 @@
 
 .casting img{
     width: 100%;
-    height: 180px
+    height: 135px
 }
 
 .loading{
