--- a/src/pages/Detalhes/detalhes.css
+++ b/src/pages/Detalhes/detalhes.css
@@ -1,6 +1,6 @@
 .detalhes-container{
     justify-content: center;
-    width: 900px;
+    width: 1000px;
     align-self: center;
 }
 
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 10px;
-    width: 100%
+    width: 850px
 }
 
 .images img{
@@ -92,8 +92,8 @@
 }
 
 .casting img{
-    width: 100%;
-    height: 135px
+    width: 85%;
+    height: 180px
 }
 
 .loading{
